# sudoku-jahresprojekt

./: .gitignore  CMakeLists.txt  README.md  Sudoku.db  base.h  commands.h  gui-konsole.c  gui.h
lib/: base_revisioned.h  main_leaderboards.h
misc/: generalProjectStructure.txt  outputSketch.txt  tableDML.sql  tableSchemaDDL.sql
misc/GUI/: rules.txt
misc/leaderboard/: outputSketch.txt  tableDML.sql  tableSchemaDDL.sql
src/: CMakeLists.txt  base.h  database.c  database.h  gui-konsole.c  gui.h  leaderboard.c  leaderboard.h  main.c  statements.h
src/GUI/: commands.h  gui-konsole.c  gui.h
src/Generator/: generator.c  generator.h
src/generator/: generator.c  generator.h
src/leaderboard/: database.c  database.h  dbHelper.c  dbHelper.h  leaderboard.c  leaderboard.h  statements.h
